# ozaml

learningocaml/notes/: values.tex
learningocaml/simple_programs/calculator/: dune-project  ocaml-java-typescript-cheatsheet.md  ocaml-semantics-cheatsheet.md
learningocaml/simple_programs/calculator/_build/: .db  .digest-db  log
learningocaml/simple_programs/calculator/_build/default/: calculator.dune-package  calculator.opam
learningocaml/simple_programs/calculator/_build/default/.dune/: configurator  configurator.v2
learningocaml/simple_programs/calculator/_build/default/lib/: calculator.cma  calculator.cmxa  calculator.cmxs  calculator.ml-gen  math_logic.ml
learningocaml/simple_programs/calculator/_build/default/lib/.calculator.objs/: calculator__Math_logic.impl.d
learningocaml/simple_programs/calculator/_build/default/lib/.calculator.objs/byte/: calculator.cmi  calculator.cmo  calculator.cmt  calculator__Math_logic.cmi  calculator__Math_logic.cmo  calculator__Math_logic.cmt
learningocaml/simple_programs/calculator/_build/default/lib/.calculator.objs/native/: calculator.cmx  calculator__Math_logic.cmx
learningocaml/simple_programs/calculator/_build/default/lib/.merlin-conf/: lib-calculator
learningocaml/simple_programs/calculator/_build/default/test/.merlin-conf/: exe-test_calculator
learningocaml/simple_programs/calculator/_build/default/test/.test_calculator.eobjs/byte/: dune__exe__Test_calculator.cmi  dune__exe__Test_calculator.cmti
learningocaml/simple_programs/calculator/lib/: math_logic.ml
(+1 files in other folders)
