(lang dune 3.17)

(name calculator)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "@Override")

(maintainers "@Override")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name calculator)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
